# HZiggurat

./: CMakeLists.txt  receiver.cpp  sender.cpp  test.cpp  test_kkrt_ot.cpp
include/: ziggurat.hpp  ziggurat256.hpp  ziggurat256_secret.hpp
test/: ziggurat256_secret_test.hpp  ziggurat256_test.hpp  ziggurat_test.hpp
